# fly-by-knight

./: .#board.cpp  .board.cpp.swp  .gitignore  .gitignore.txt  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  TODO  board.cpp  board.hpp  book.fbk  flybyknight  game.cpp  game.hpp  main.cpp  main.hpp  makefile  moveTree.cpp  moveTree.hpp  piece.cpp  piece.hpp
include/: fly_by_knight.h  fly_by_knight_algorithm_constants.h  fly_by_knight_analysis.h  fly_by_knight_analysis_types.h  fly_by_knight_analysis_worker.h  fly_by_knight_debug.h  fly_by_knight_error.h  fly_by_knight_game_clock.h  fly_by_knight_hash.h  fly_by_knight_io.h  fly_by_knight_move_tree.h  fly_by_knight_pick.h  fly_by_knight_types.h  fly_by_knight_uci.h  fly_by_knight_version.h  fly_by_knight_xboard.h
logo/: generate_icon.sh
src/: CMakeLists.txt  fly_by_knight.c  fly_by_knight_analysis.c  fly_by_knight_analysis_worker.c  fly_by_knight_debug.c  fly_by_knight_game_clock.c  fly_by_knight_hash.c  fly_by_knight_io.c  fly_by_knight_move_tree.c  fly_by_knight_pick.c  fly_by_knight_uci.c  fly_by_knight_xboard.c
test/: match.sh
test/positions/: KRRk.fen  italian.fen
